feat: 简化代码